test(setup): configure Vitest, Supertest, and mongodb-memory-server, add multi-environment support, and implement healthcheck endpoint tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     // Base URL & Aliases
     "baseUrl": "./src",
     "paths": {
+      "@constants/*": ["constants/*"],
       "@config/*": ["config/*"],
       "@modules/*": ["modules/*"],
       "@middlewares/*": ["middlewares/*"],
